--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,27 @@
 		    <artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
 		
+		<!-- JWT 토큰을 사용하기 위한 의존 설정 추가 -->
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-api</artifactId>
+		    <version>0.12.5</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-impl</artifactId>
+		    <version>0.12.5</version>
+		    <scope>runtime</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-jackson</artifactId>
+		    <version>0.12.5</version>
+		    <scope>runtime</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
